<resources>
    <string name="app_name">AAFundamentals</string>
    <string name="robert_down">Robert\nDowney Jr.</string>
    <string name="chris_evans">Chris\nEvans</string>
    <string name="mark_ruffal">Mark\nRuffalo</string>
    <string name="chris_hemsw">Chris\nHemsworth</string>
    <string name="back">Back</string>
    <string name="cast">Cast</string>
    <string name="name">Avengers:\nEnd Game</string>
    <string name="pg_rating">13+</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="reviews">125 Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="storylineText">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos&#8217; actions and restore balance to the universe.</string>
    <string name="cast_member">Cast member</string>
    <string name="movies_list">Movies list</string>
    <string name="movie_list_menu">Movie list menu</string>
    <string name="pg_rating_13">PG rating 13</string>
    <string name="like">Like</string>
    <string name="background">Background</string>
    <string name="movie_name">Avengers: End Game</string>
    <string name="minutes">137 min</string>

</resources>